# jcloud-pass

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: 3092883_CSP_Ass02_doc.docx  CSP-Ass02-doc.docx  ~$92883_CSP_Ass02_doc.docx
src/: logging.py
src/database/core/: __init__.py  azure_blob_connection.py  mongodb_connection.py
src/entities/: __init__.py  directory.py  file.py  metadata.py  user.py
src/factory/: metadata_provider.py  storage_provider.py
src/routes/: auth.py  workspace.py
src/services/: azure_storage_service.py  directory_service.py  mongodb_metadata_service.py  system_service.py
src/static/:  firebase-login.js  firebase-login.js
src/static/css/: index.css
src/static/js/: auth.js  firebase-login.js  workspace.js
src/static/style/: auth.css  index.css  workspace.css
src/templates/: index.html
src/templates/auth/: login.html  signup.html
src/templates/workspace/: duplicates.html  workspace.html  workspace_subdir.html
src/utils/: __init__.py  helper.py  validation.py  variables.py
