[project]
name = "jcloud-pass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "google-auth>=2.49.1",
    "jinja2>=3.1.6",
    "pydrantic>=0.0.3",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
